[Material][Mac] Fix for bubble decoration text in dark theme

BUG=640511

Review-Url: https://codereview.chromium.org/2265423007
Cr-Commit-Position: refs/heads/master@{#415062}