chrome/browser/ui/cocoa/tabs/tab_window_controller.mm
@@ -49,6 +49,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   return [[self parentWindow] hasDarkTheme];
 }
 
+- (BOOL)inIncognitoModeWithSystemTheme {
+  return [[self parentWindow] inIncognitoModeWithSystemTheme];
+}
+
 @end
 
 @implementation TabWindowController
